// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountBadge — dark theme with count 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Likes, 12 new"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={12}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "minHeight": 44,
        "minWidth": 44,
      }
    }
  >
    <ViewManagerAdapter_SymbolModule
      accessibilityElementsHidden={true}
      animated={false}
      colors={[]}
      importantForAccessibility="no"
      name="heart"
      size={24}
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      tint={4294308589}
      tintColor="#F5F2ED"
      type="monochrome"
    />
    <View
      style={
        {
          "position": "absolute",
          "right": 2,
          "top": 2,
          "zIndex": 10,
        }
      }
    >
      <View
        accessibilityLabel="12 unread"
        accessible={true}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FF8560",
            "borderRadius": 999,
            "height": 20,
            "justifyContent": "center",
            "minWidth": 20,
            "paddingHorizontal": 4,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              {
                "color": "#1A1815",
              },
              undefined,
            ]
          }
        >
          12
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`CountBadge — light theme with count 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Likes, 12 new"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={12}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "minHeight": 44,
        "minWidth": 44,
      }
    }
  >
    <ViewManagerAdapter_SymbolModule
      accessibilityElementsHidden={true}
      animated={false}
      colors={[]}
      importantForAccessibility="no"
      name="heart"
      size={24}
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      tint={4279900181}
      tintColor="#1A1815"
      type="monochrome"
    />
    <View
      style={
        {
          "position": "absolute",
          "right": 2,
          "top": 2,
          "zIndex": 10,
        }
      }
    >
      <View
        accessibilityLabel="12 unread"
        accessible={true}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F2724B",
            "borderRadius": 999,
            "height": 20,
            "justifyContent": "center",
            "minWidth": 20,
            "paddingHorizontal": 4,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          12
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
